force-app/main/default/objects/Activity/fields/Accessibility_Presence__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Presence__c</fullName>
    <label>CSAT: Accessibility &amp; Presence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>