force-app/main/default/objects/Activity/fields/Freight_Forwarder_Service_Quality__c.field-meta.xml
<CustomField>
    <fullName>Freight_Forwarder_Service_Quality__c</fullName>
    <label>CSAT: Freight Forwarder Service Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>