force-app/main/default/objects/Activity/fields/Meets_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Meets_Commitments__c</fullName>
    <label>CSAT: Meets Commitments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>