force-app/main/default/objects/Activity/fields/Pre_Call_Information__c.field-meta.xml
<CustomField>
    <fullName>Pre_Call_Information__c</fullName>
    <label>Pre Call Information</label>
    <type>TextArea</type>
</CustomField>