force-app/main/default/objects/Activity/fields/Technical_Inquiry_Response_Speed__c.field-meta.xml
<CustomField>
    <fullName>Technical_Inquiry_Response_Speed__c</fullName>
    <label>CSAT: Technical Inquiry Response Speed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>